# leptos-tech-demo

./: .editorconfig  .gitignore  Cargo.toml  README.md  index.html  mise.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
mise-tasks/: compress-images  dev
mise-tasks/check/: _default  fix
mise-tasks/format/: _default  fix
mise-tasks/lint/: _default  fix
public/: stylers.scss  styles.css
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/home/: about.rs  introduction.rs  light_bulb.rs  mod.rs  todo_list.module.css  todo_list.rs
src/components/lab1/: about.rs  introduction.rs  mod.rs  todo_list.module.css  todo_list.rs
src/components/pokedex/: mod.rs  pokedex_details.rs  pokedex_list.module.css  pokedex_list.rs
src/components/pokeshop/: calculate_cost.rs  group_index.rs  mod.rs  pokeshop_context.rs  product.module.css  product.rs  shopping_cart.module.css  shopping_cart.rs
src/pages/: checkout.rs  home.rs  lab1.rs  mod.rs  not_found.rs  page_layout.rs  pokedex.module.css  pokedex.rs  pokedex_details.module.css  pokedex_details.rs  pokedex_layout.module.css  pokedex_layout.rs  pokeshop.rs  pokeshop_layout.rs
src/structs/: pokemon.rs
