[package]
name = "leptos_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.10", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.11", features = ["csr", "nightly"] }
stylance = { version = "0.3.0", features = ["nightly"] }

[package.metadata.stylance]
output_file = "./public/stylers.scss"

[lints.clippy]
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
