[package]
name = "leptos_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-net = { version = "0.5.0", features = ["json"] }
leptos = { version = "0.6.10", features = ["csr", "nightly"] }
leptos-use = { version = "0.10.7", features = ["serde"] }
leptos_meta = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.11", features = ["csr", "nightly"] }
log = "0.4.21"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
stylance = { version = "0.3.0", features = ["nightly"] }

[package.metadata.stylance]
output_file = "./public/stylers.scss"

[lints.clippy]
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
