cargo-features = ["codegen-backend", "trim-paths", "profile-rustflags"]

[package]
name = "leptos_demo"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-net = { version = "0.6.0", features = ["json"] }
leptos = { version = "0.8.2", features = ["csr", "nightly"] }
leptos_meta = "0.8.2"
leptos_router = { version = "0.8.2", features = ["nightly"] }
leptos-use = { git = "https://github.com/Synphonyte/leptos-use" }
log = "0.4.27"
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
stylance = { version = "0.6.0", features = ["nightly"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["wasmbind"] }

[package.metadata.stylance]
output_file = "./public/stylers.scss"

[lints.clippy]
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }

[profile.dev]
debug = 0
panic = "abort"
rustflags = ["--cfg", "erase_components"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1
panic = "abort"
trim-paths = "all"
rustflags = ["-Zlocation-detail=none"]
